manifests/tracing/zipkin_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
  labels:
    app: zipkin
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      restartPolicy: Always
      containers:
        - image: openzipkin/zipkin:latest
          imagePullPolicy: Always
          name: zipkin
          resources:             
            requests:
              memory: "<request_memory>"  
          ports:
            - containerPort: 9411
