manifests/tracing/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zipkin
  name: zipkin
  namespace: default
spec:
  selector:
    app: zipkin
  ports:
    - name: zipkin
      port: 9411
      protocol: TCP
      targetPort: 9411
